feat: improve cert handling process (#193)
